--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/api.js",
   "scripts": {
     "start": "node src/api.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/api.js"
   },
   "keywords": [],
   "author": "",
